# coda

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/jobs/: commands.rs  mod.rs  runner_client.rs  types.rs
src-tauri/src/features/settings/: commands.rs  keychain.rs  mod.rs  types.rs
src/features/jobs/: index.ts
src/features/jobs/api/: jobs.api.ts
src/features/jobs/model/: jobs.store.ts  jobs.types.ts
src/features/jobs/ui/: JobDetails.tsx  JobRow.tsx  JobsList.tsx
src/features/notifications/: index.ts  notifications.hooks.ts
src/features/settings/: index.ts
src/features/settings/model/: settings.store.ts  settings.types.ts
src/features/settings/ui/: Settings.tsx
src/features/skills/: index.ts
src/features/skills/model/: built-in-skills.ts  skills.store.ts  skills.types.ts
src/features/skills/ui/: RepoSkills.tsx  SkillsList.tsx
src/features/snippets/: index.ts
src/features/snippets/model/: snippets.store.ts  snippets.types.ts
src/features/snippets/ui/: SnippetsList.tsx
src/features/tasks/: index.ts
tools/runner/: .env.example  package-lock.json  package.json  repo-conventions.json
tools/runner/src/: ai-service.ts  conventions.ts  db-service.ts  executor.ts  git-service.ts  index.ts  patch-service.ts  slack-bot.ts  slack-service.ts  store.ts  types.ts
(+4 files in other folders)
